# 104-stm32-primer

./: .clang-format  .cz.toml  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  README.md
app/01_blinky/: CMakeLists.txt
app/01_blinky/src/: blinky.cpp
app/01_blinky_kw/: CMakeLists.txt
app/01_blinky_kw/src/: blinky_kw.cpp
app/01_multi-function-shield/: CMakeLists.txt
app/01_multi-function-shield/src/: multi-function-shield.cpp
app/02_button/: CMakeLists.txt
app/02_button/src/: button.cpp
app/02_button_it/: CMakeLists.txt
app/02_button_it/src/: button_it.cpp
app/02_button_kw/: CMakeLists.txt
app/02_button_kw/src/: button_kw.cpp
app/02_button_kw_it/: CMakeLists.txt
app/02_button_kw_it/src/: button_kw_it.cpp
app/02_multi-function-shield/: CMakeLists.txt
app/02_multi-function-shield_it/: CMakeLists.txt
app/02_multi-function-shield_it/src/: multi-function-shield_it.cpp
app/02_multi-function-shield_it_poll/: CMakeLists.txt
app/02_multi-function-shield_it_poll/src/: multi-function-shield_it_poll.cpp
app/03_usart/: CMakeLists.txt
app/03_usart/src/: usart.cpp
app/03_usart_kw/: CMakeLists.txt
app/03_usart_kw/src/: usart_kw.cpp
app/multi-function-shield/: CMakeLists.txt
app/multi-function-shield/src/: mfs.cpp  multi-function-shield.cpp
doc/: readme.md
lib/kw-stm-g0/: CMakeLists.txt
lib/kw-stm-g0/include/kw-stm-g0/drivers/: pin.h  pin_exti.h  usart.h
scripts/: build.ps1  deploy.ps1  rebuild-release.ps1  rebuild.ps1
